add chain block to fit data acquirers
